--- a/index.html
+++ b/index.html
@@ -246,6 +246,36 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
 <!--</div> -->
 <!-- End Portfolio Section -->
 </div>
+<h3 class="w3-padding-16 w3-text-light-grey">Programming Languages</h3>
+<ul>
+  <li>
+    Python
+  </li>
+  <li>
+    C/C++
+  </li>
+  <li>
+    C#
+  </li>
+  <li>
+    Prolog
+  </li>
+  <li>
+    HTML
+  </li>
+  <li>
+    PHP
+  </li>
+  <li>
+    CSS
+  </li>
+  <li>
+    SQL
+  </li>
+  <li>
+    MATLAB
+  </li>
+</ul>
   <!-- Contact Section -->
   <div class="w3-padding-64 w3-content w3-text-grey" id="contact">
     <h2 class="w3-text-light-grey">Contact Me</h2>
