--- a/index.html
+++ b/index.html
@@ -131,6 +131,35 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
     <h2 class="w3-text-light-grey">My Experience</h2>
     <hr style="width:200px" class="w3-opacity">
 
+    <div class="container">
+      <div class="image">
+        <img src="img/02D2F7C9-4D4B-4E95-B715-3B787164C6F6.JPG" style="width:20%" style="float: left">
+      </div>
+
+      <div class="text">
+        <ul>
+        <li>
+        Efficiently ran simulation on the prototype of the advertisment robot - visualized the performance of the structure under predetermined load.
+        </li>
+        <li>
+        Checked for failure under the given load, deformation, displacement and stress values.
+        </li>
+      </ul>
+        
+      </div>
+      <div class="overlay">
+        <div class="text">
+          Stress simulation
+        </div>
+      </div>
+      <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
+      <img src="img/Manufacturing-2.jpeg" style="width:20%"> -->
+    
+  <!-- End photo grid -->
+  <!--</div> -->
+<!-- End Portfolio Section -->
+</div>
+
     <!-- Grid for photos -->
     <div class="container">
         <div class="image">
@@ -291,7 +320,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
   
     <!-- Footer -->
   <footer class="w3-content w3-padding-64 w3-text-grey w3-xlarge">
-    <p>Reach me out</p>
+    <p>Reach out to me</p>
     <a href="mailto:vojin.lukic@gmail.com"><i class="fa fa-inbox w3-hover-opacity"></i></a>
     <a href="https://github.com/VojinLukic02"><i class="fa fa-github w3-hover-opacity"></i></a>
     <a href="https://www.linkedin.com/in/vojin-lukic-70b202176/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
