--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
   <div class="text">
     <ul>
     <li>
-    Studied the basics of ANSYS software and ran a fluid flow simulation - the performance of outdoor ventilation system.
+    Ran a fluid flow simulation - the performance of outdoor ventilation system.
     </li>
     <li>
     Visualization of results - streamlines, contour plots and vectors of velocity, pressure, temperature etc.
