--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
       <div class="w3-dark-grey" style="height:28px;width:70%"></div>
     </div><br>
 
-    <a href="src/CV - September 2022.pdf" download>
+    <a href="src/CV1 - September2022.pdf" download>
     <button class="w3-button w3-light-grey w3-padding-large w3-section">
       <i class="fa fa-download"></i> Download Resume
     </button>
