--- a/index.html
+++ b/index.html
@@ -162,6 +162,35 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
 <br>
 <div class="container">
   <div class="image">
+    <img src="img/IMG_8071.JPG" style="width:20%" style="float: left">
+  </div>
+
+  <div class="text">
+    <ul>
+    <li>
+    Ran a fluid flow simulation - the performance of outdoor ventilation system.
+    </li>
+    <li>
+    Visualization of results - streamlines, contour plots and vectors of velocity, pressure, temperature etc.
+    </li>
+  </ul>
+    
+  </div>
+  <div class="overlay">
+    <div class="text">
+      Fluid simulation in ANSYS Discovery AIM
+    </div>
+  </div>
+  <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
+  <img src="img/Manufacturing-2.jpeg" style="width:20%"> -->
+
+<!-- End photo grid -->
+<!--</div> -->
+<!-- End Portfolio Section -->
+</div>
+<br>
+<div class="container">
+  <div class="image">
     <img src="img/IMG_6870.JPG" style="width:20%" style="float: left">
   </div>
 
