--- a/index.html
+++ b/index.html
@@ -168,17 +168,17 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
   <div class="text">
     <ul>
     <li>
-    Ran a fluid flow simulation - the performance of outdoor ventilation system.
+    Joined the team in Septermber 2022.
     </li>
     <li>
-    Visualization of results - streamlines, contour plots and vectors of velocity, pressure, temperature etc.
+    Utilization of Ansys FLUENT for determination of different performance parameters of the aerodynamic components of the car.
     </li>
   </ul>
     
   </div>
   <div class="overlay">
     <div class="text">
-      Fluid simulation in ANSYS Discovery AIM
+      HKU Racing Aerodynamics Division (FSUK)
     </div>
   </div>
   <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
