--- a/index.html
+++ b/index.html
@@ -131,6 +131,35 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
     <h2 class="w3-text-light-grey">My Experience</h2>
     <hr style="width:200px" class="w3-opacity">
 
+<div class="container">
+  <div class="image">
+    <img src="img/IMG_8071.JPG" style="width:20%" style="float: left">
+  </div>
+
+  <div class="text">
+    <ul>
+    <li>
+    Joined the team in Septermber 2022.
+    </li>
+    <li>
+    Utilization of Ansys FLUENT for determination of different performance parameters of the aerodynamic components of the car.
+    </li>
+  </ul>
+    
+  </div>
+  <div class="overlay">
+    <div class="text">
+      HKU Racing Aerodynamics Division (FSUK)
+    </div>
+  </div>
+  <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
+  <img src="img/Manufacturing-2.jpeg" style="width:20%"> -->
+
+<!-- End photo grid -->
+<!--</div> -->
+<!-- End Portfolio Section -->
+</div>
+<br>
     <div class="container">
       <div class="image">
         <img src="img/02D2F7C9-4D4B-4E95-B715-3B787164C6F6.JPG" style="width:20%" style="float: left">
@@ -162,23 +191,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
 <br>
 <div class="container">
   <div class="image">
-    <img src="img/IMG_8071.JPG" style="width:20%" style="float: left">
+    <img src="img/IMG_6870.JPG" style="width:20%" style="float: left">
   </div>
 
   <div class="text">
     <ul>
     <li>
-    Joined the team in Septermber 2022.
+    Ran a fluid flow simulation - the performance of an outdoor simulation system.
     </li>
     <li>
-    Utilization of Ansys FLUENT for determination of different performance parameters of the aerodynamic components of the car.
+    Visualization of results - streamlines, contour plots and vectors of velocity, pressure, temperature etc.
     </li>
   </ul>
     
   </div>
   <div class="overlay">
     <div class="text">
-      HKU Racing Aerodynamics Division (FSUK)
+      Fluid simulation in ANSYS Discovery AIM
     </div>
   </div>
   <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
