--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
     Brainstormed and modelled the initial concept for the mount for a security device in hospitals.
     </li>
     <li>
-    Performed "reverse engineering" - with the goal of 3d printing the aformentioned early design.
+    Performed "reverse engineering" - with the goal of 3d printing the aforementioned early design.
     </li>
   </ul>
     
