--- a/index.html
+++ b/index.html
@@ -133,16 +133,19 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
 
 <div class="container">
   <div class="image">
-    <img src="img/IMG_8071.JPG" style="width:20%" style="float: left">
+    <img src="img/WhatsApp Image 2023-04-15 at 17.29.40.jpeg" style="width:20%" style="float: left">
   </div>
 
   <div class="text">
     <ul>
     <li>
-    Joined the team in September 2022.
+    QBlade software utilization with different optimization algorithms to achieve highest energy to mass ratio of the blades. 
     </li>
     <li>
-    Utilization of Ansys FLUENT for determination of different performance parameters of the aerodynamic components of the car.
+    Reading and research on best material selection for defined conditions.
+    </li>
+    <li>
+      Solving delicate issues with 3d printing very thin blade edges.
     </li>
   </ul>
     
