--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
   <div class="text">
     <ul>
     <li>
-    QBlade software utilization with different optimization algorithms to achieve highest energy to mass ratio of the blades. 
+     Different optimization algorithms to achieve highest energy to mass ratio of the blades. 
     </li>
     <li>
     Reading and research on best material selection for defined conditions.
