--- a/index.html
+++ b/index.html
@@ -142,17 +142,14 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
      Different optimization algorithms to achieve highest energy to mass ratio of the blades. 
     </li>
     <li>
-    Reading and research on best material selection for defined conditions.
-    </li>
-    <li>
-      Solving delicate issues with 3d printing very thin blade edges.
+      Solving delicate issues with material selection and 3d printing very thin blade edges.
     </li>
   </ul>
     
   </div>
   <div class="overlay">
     <div class="text">
-      HKU Racing Aerodynamics Division (FSUK)
+      Qblade Wind Turbine Blades Model
     </div>
   </div>
   <!-- <img src="img/Manufacturing-1.jpeg" style="width:20%">
