--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
       <div class="text">
         <ul>
         <li>
-          Designed, coded and tested a robot capable of following a specified black path, even in the presence of missing black segments.
+          Robot capable of following a specified black path, even in the presence of missing black segments.
         </li>
         <li>
           The robot uses IR sensors as input values to determine the speed of the right and left wheel motors.
