--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
           Designed, coded and tested a robot capable of following a specified black path.
         </li>
         <li>
-          The robot uses IR sensors as input values to determine the speed of the right and left wheel motors.
+          IR sensors used as input values to determine the speed of the right and left wheel motors.
         </li>
       </ul>
         
