--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">About me</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>I am Vojin Lukic, a dedicated mechanical engineering student with a keen interest in combining theoretical knowledge with practical experience. With a strong academic background and achievements such as being a member of the Talents Programme, Dean's List, and recipient of scholarships, I have honed my skills in areas like 3D modeling, programming, and manufacturing. I have contributed to projects involving oil oxidation analysis, complex surface modeling, and the design of high-performance turbine blades. Equipped with proficiency in engineering software and hands-on experience with various machines, I am ready to apply my expertise to solve complex engineering challenges and contribute to innovative solutions.
+    <p>I am Vojin Lukic, a dedicated mechanical engineering student with a keen interest in combining theoretical knowledge with practical experience. With a strong academic background and achievements such as being a member of the Talents Programme, Dean's List, and recipient of scholarships, I have honed my skills in areas like 3D modeling, programming, and manufacturing. I have contributed to projects involving oil oxidation analysis, complex surface modeling, robot coding and the design of high-performance turbine blades. Equipped with proficiency in engineering software and hands-on experience with various machines, I am ready to apply my expertise to solve complex engineering challenges and contribute to innovative solutions.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">3D Modelling</p>
@@ -120,7 +120,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Plus Jakarta Sans", sans-serif}
     </div>
     <p class="w3-wide">Testing rig design</p>
     <div class="w3-white">
-      <div class="w3-dark-grey" style="height:28px;width:70%"></div>
+      <div class="w3-dark-grey" style="height:28px;width:80%"></div>
     </div><br>
 
     <a href="src/VojinLUKICSeptember2023CV.pdf" download>
